Added CSS for colors and fonts to over-ride Bootstrap theme

--- a/source/layouts/_navbar.html.erb
+++ b/source/layouts/_navbar.html.erb
@@ -10,7 +10,7 @@
     <a href="" class="navbar-wagon-item navbar-wagon-link">Host</a>
     <a href="" class="navbar-wagon-item navbar-wagon-link">Trips</a>
     <a href="" class="navbar-wagon-item navbar-wagon-link">Messages</a>
-    <%= link_to "Meet the team", "team.html", class: "btn btn-primary" %>
+    <%= link_to "Meet the team", "team.html", class: "btn btn-info" %>
 
     <!-- Profile picture with dropdown list -->
     <div class="navbar-wagon-item">
