--- a/source/stylesheets/config/_colors.scss
+++ b/source/stylesheets/config/_colors.scss
@@ -7,4 +7,8 @@ $yellow: #FDB631;
 $orange: #E67E22;
 $green: #32B796;
 $gray: #000000;
-$light-gray: #F4F4F4;
+$light-gray: #eeeeee;
+$mid-gray: #393e46;
+$dark-gray: #222831;
+$pinky: #b83b5e;
+
