--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -13,7 +13,7 @@
 }
 .footer-links a {
   color: black;
-  opacity: 0.15;
+  opacity: 0.30;
   text-decoration: none;
   font-size: 24px;
   padding: 0px 10px;
@@ -21,6 +21,18 @@
 .footer-links a:hover {
   opacity: 1;
 }
+
+.footer-links {
+  color: black;
+  opacity: 0.15;
+  text-decoration: none;
+  font-size: 24px;
+  padding: 0px 10px;
+  &:hover {
+  opacity: 1;
+  }
+}
+
 .footer .fa-heart {
   color: #D23333;
 }
