--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -11,16 +11,17 @@
   display: flex;
   align-items: center;
 }
-.footer-links a {
-  color: black;
-  opacity: 0.30;
-  text-decoration: none;
-  font-size: 24px;
-  padding: 0px 10px;
-}
-.footer-links a:hover {
-  opacity: 1;
-}
+
+// .footer-links a {
+//   color: black;
+//   opacity: 0.30;
+//   text-decoration: none;
+//   font-size: 24px;
+//   padding: 0px 10px;
+// }
+// .footer-links a:hover {
+//   opacity: 1;
+// }
 
 .footer-links {
   color: black;
